--- a/www/docs/src/app/globals.css
+++ b/www/docs/src/app/globals.css
@@ -183,3 +183,15 @@
 .max-w-content {
   max-width: 1200px;
 }
+
+.text-h1 {
+  font-size: 24px;
+  line-height: 125%;
+  font-weight: 500;
+}
+
+.text-h2,
+.text-h3 {
+  line-height: 160%;
+  font-weight: 500;
+}
