--- a/www/docs/src/app/globals.css
+++ b/www/docs/src/app/globals.css
@@ -29,10 +29,6 @@
   h6 {
     font-weight: 500;
   }
-
-  body {
-    letter-spacing: -0.045em;
-  }
 }
 
 @theme {
@@ -182,4 +178,16 @@
 
 .max-w-content {
   max-width: 1200px;
+}
+
+.text-h1 {
+  font-size: 24px;
+  line-height: 125%;
+  font-weight: 500;
+}
+
+.text-h2,
+.text-h3 {
+  line-height: 160%;
+  font-weight: 500;
 }
